[package]
name = "reverse"
version = "0.2.2"
edition = "2018"
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "Reverse mode automatic differentiation."
repository = "https://github.com/al-jshen/reverse"

categories = ["science"]

[dependencies]

[dev-dependencies]
approx_eq = "0.1"

