[package]
name = "reverse_differentiable"
version = "0.1.2"
edition = "2018"
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
license = "MIT OR Apache-2.0"

description = "Automatic differentiation of functions."
repository = "https://github.com/al-jshen/reverse"

categories = ["science"]

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"

[lib]
proc-macro = true
